--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -13,7 +13,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .td_font {font-family: Arial, Helvetica, sans-serif;font-size: 14px;}
 .fl_le{ float:left}
 .fl_ri{ float:right}
-.foot{background-image:url(/user{{$STATIC}}images/footbg.jpg); background-repeat:repeat-x; width:965px;margin:0 auto; margin-bottom:6px; height:150px;}
+.foot{background-image:url(/user{{$STATIC}}images/footbg.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:6px; height:150px;}
 .foot .footmid{ width:950px; float:left;}
 .foot .link .wordlink{float:left;margin-top:30px; width:100%; color:#ccc; height:38px;}
 .foot .link .wordlink span{ color:#ea6210}
@@ -32,18 +32,19 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
-.left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
-.left_help_service{background-image:url(/user{{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
+.left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
+.left_help_service{background-image:url(/user{{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:2px;  margin-bottom:5px; margin-left:10px; height:26px;}
 .left_top{padding-top:10px;padding-left:33px;}
 .left_help_wid{padding-top:0px;padding-left:5px;}
 .fontcolor{color:#4C4B4B;}
 .height_t{height:7px;}
 .topimg {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg2 {text-align:left;background:url(/user{{$STATIC}}images/customer_head.jpg) 0px no-repeat;line-height:82px;height:82px;width:82px;}
+.topimg2 {text-align:left;background:url(/user{{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
 .left_dns {height:118px;width:262px;}
 .left_vip {height:121px;width:262px;}
 .left_beiban {height:93px;width:262px;}
 .left_service_color{color:red;}
+
 .right_top{padding-top:0px;padding-right:0px;}
 .topimg3 {text-align:left;background:url(/user{{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
 .host_bg {text-align:left;background:url(/user{{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:257px;width:689px;}
@@ -55,6 +56,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_hg3{height:36px;}
 .right_wid{ width:33%}
 .wid_menu{ width:970px}
+
 
 
 
