--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -99,16 +99,16 @@
 				   <div class="left_help_wid">
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
 					    <tr>
-							<td class="fontcolor" rowspan="3"><div class="left_box topimg2">&nbsp;</div></td><td>&nbsp;</td>
-							<td class="fontcolor right" align="left" width="160">免费咨询热线:<br />400-400-400400400</td>
+							<td class="fontcolor" rowspan="3"><div class="topimg2">&nbsp;</div></td><td>&nbsp;</td>
+							<td class="fontcolor right color_orange" align="left" width="160">免费咨询热线:<br />0791-88888888</td>
 						</tr>
 					    <tr>
 							<td>&nbsp;</td>
-							<td class="fontcolor right" align="left">免费咨询热线:<br />400-400-400400400</td>
+							<td class="fontcolor right color_orange" align="left">免费咨询热线:<br />0791-88888888</td>
 						</tr>
 					    <tr>
 							<td>&nbsp;</td>
-							<td class="fontcolor right" align="left">免费咨询热线:<br />400-400-400400400</td>
+							<td class="fontcolor right color_orange" align="left">免费咨询热线:<br />0791-88888888</td>
 						</tr>
 				    </table>
 				   </div>
