--- a/user/view/default/public/foot.html
+++ b/user/view/default/public/foot.html
@@ -1,33 +1,31 @@
 <div align="center">
-	<div class="foot">
-	   <div class="fl_le"><img src="/user{{$STATIC}}images/foot1.jpg"></div>
-	   <div class="footmid">
-			<div class="wordlink">
-				 <table border="0" cellspacing="7" width="100%">
-					 <tr>
-						<td bgcolor="#F7F4F1" class="right" valign="middle" height="40"><span>友情合作：</span>
-							<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">kangle</a></span>
-							<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">easypanel</a></span>
-							<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">vhms</a></span>
-						</td>
-					 </tr>
-				</table>
-		  </div>
-			<table>
+	<div class="left_box bgcolor_left left_bg_foot">
+		 <div class="left_help_wid">
+			<table width="960" border="0" cellpadding="0" cellspacing="0">
 				<tr>
-					<td align="center">
-					  | 关于我们 
-					  | 广告服务
-					  | 付款方式 
-					  | 友情连接 
-					  | 
-					  <div align="center">Powered by JanBao vhs and <a href='http://www.kanglesoft.com/'>kangle</a></div>
+					<td class="fontcolor" colspan="3">
+						<table border="0" cellspacing="7" width="100%">
+							 <tr>
+								<td bgcolor="#FFFFFF" class="right" valign="middle" height="40"><span>友情合作：</span>
+									<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">kangle</a></span>
+									<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">easypanel</a></span>
+									<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">vhms</a></span>
+								</td>
+							 </tr>
+						</table>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3" align="center">
+						<table><tr><td align="center">
+								  | 关于我们 | 广告服务| 付款方式 | 友情连接| 
+								  <div align="center">Powered by JanBao vhs and <a href='http://www.kanglesoft.com/'>kangle</a></div>
+						</td></tr></table>
 					</td>
 				</tr>
 			</table>
-	   </div>
-	   <div class="fl_ri"><img src="/user{{$STATIC}}images/foot2.jpg"></div>
-	</div>
+		 </div>
+	 </div>
 </div>
-
+<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 
