add request in fc & fa

--- a/user/view/default/frame/index.html
+++ b/user/view/default/frame/index.html
@@ -10,7 +10,7 @@
 	<frameset cols="200,9,*" frameborder="no" border="0" framespacing="0" name="main1">
 		<frame src="?c=user&a=left" name="left" noresize="noresize">
 		<frame src="?c=frame&a=controlleft" name="control" scrolling="no"> 
-		<frame src="?c={{$fc}}&a={{$fa}}" name="main" scrolling="yes">
+		<frame src="?c={{$fc}}&a={{$fa}}{{$request}}" name="main" scrolling="yes">
 	</frameset>
 </frameset>
 <noframes>
