--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -35,7 +35,14 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_help_wid{padding-top:0px;padding-left:5px;}
 .fontcolor{color:#4C4B4B;}
 .height_t{height:7px;}
-.topimg {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_1 {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_2 {text-align:left;background:url(/user{{$STATIC}}images/help_2.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_3 {text-align:left;background:url(/user{{$STATIC}}images/help_3.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_4 {text-align:left;background:url(/user{{$STATIC}}images/help_4.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_5 {text-align:left;background:url(/user{{$STATIC}}images/help_5.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_6 {text-align:left;background:url(/user{{$STATIC}}images/help_6.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_7 {text-align:left;background:url(/user{{$STATIC}}images/help_7.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_8 {text-align:left;background:url(/user{{$STATIC}}images/help_8.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
 .topimg2 {text-align:left;background:url(/user{{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
 .topimg_h {text-align:left;background:url(/user{{$STATIC}}images/menu-dxt-red_bg.jpg) 0px no-repeat;line-height:30px;height:30px;width:7px;}
 .left_dns {height:118px;width:262px;}
