--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -69,20 +69,20 @@
 				<div class="left_help_wid">
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
 					    <tr>
-							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+							<td class="fontcolor"><div class="left_box topimg_1">域名相关问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg_2">域名相关问题</div></td>
 						</tr>
 					    <tr>
-							<td class="fontcolor"><div class="left_box topimg">支付问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+							<td class="fontcolor"><div class="left_box topimg_3">支付问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg_4">域名相关问题</div></td>
 						</tr>
 					    <tr>
-							<td class="fontcolor"><div class="left_box topimg">支付问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+							<td class="fontcolor"><div class="left_box topimg_5">支付问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg_6">域名相关问题</div></td>
 						</tr>
 					    <tr>
-							<td class="fontcolor"><div class="left_box topimg">支付问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+							<td class="fontcolor"><div class="left_box topimg_7">支付问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg_8">域名相关问题</div></td>
 						</tr>
 				  </table>
 				</div>
