--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -51,11 +51,9 @@
 					{{for $i=count($news);$i<(count($news))-7;$i--}}
 					    <tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
 					 {{/for}}
-						<tr><td rowspan="2" valign="middle" class="right_hg">
-							<a href="#"><img src="/user{{$STATIC}}images/box_tl4.jpg" border="0" /></a>
-						</td></tr>
 				  </table>
 				</div>
+				<a href="#"><div class="left_bg_gong"></div></a>
 			</div>
 			<!--公告代码结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
