--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -47,13 +47,21 @@
 			<div class="left_box bgcolor_left index_bg">
 				<div class="left_bg"></div>
 				<div class="left_top">
-					<table cellpadding="0" cellspacing="0" id="table_t">
-					{{for $i=count($news);$i>(count($news))-7;$i--}}
-					    <tr><td class="fontcolor"><font color='red'>{{substr($news[$i].title,0,27)}}</font></td><td class="fontcolor"><font color='red'>{{substr($news[$i].add_time,5,5)}}</font></td></tr>
-					 {{/for}}
+				<table cellpadding="0" cellspacing="0" id="table_t">
+					<tr><td class="left_hg" valign="top">
+						<table cellpadding="0" cellspacing="0" id="table_t">
+						{{for $i=count($news);$i>(count($news))-7;$i--}}
+							<tr>
+								<td class="fontcolor"><font color='red'>{{substr($news[$i].title,0,27)}}</font></td>
+								<td class="fontcolor"><font color='red'>{{substr($news[$i].add_time,5,5)}}</font></td>
+							</tr>
+						 {{/for}}
+						</table>
+					  </td></tr>
+				  	 <tr><td><a href="#"><div class="left_bg_gong"></div></a></td></tr>
 				  </table>
 				</div>
-				<a href="#"><div class="left_bg_gong"></div></a>
+				
 			</div>
 			<!--公告代码结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
