--- a/user/view/default/public/news.html
+++ b/user/view/default/public/news.html
@@ -1,11 +1,10 @@
-{{include file='common/head.html'}}
 <div align="center">
-<div class="head_block tb_wid">&nbsp;{{$new.title}}</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
-     <tr>
-      <td class="td_bgc right_2" >{{$new.body}}</td>
- </table>
+	<div class="head_block tb_wid">&nbsp;{{$new.title}}dsfffffff</div>
+	<div class="block tb_wid">
+ 		<table id="table_2" cellpadding="0" cellspacing="1">
+    	 <tr>
+     	 <td class="td_bgc right_2" >{{$new.body}}dfssssssssss</td>
+     	 </tr>
+ 		</table>
 	</div>
-	
 </div>
