--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -27,6 +27,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 #table_rr {width:100%; border:0px; line-height:24px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_vh{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
 .left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
@@ -46,6 +47,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .topimg_8 {text-align:left;background:url(/user{{$STATIC}}images/help_8.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
 .topimg2 {text-align:left;background:url(/user{{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
 .topimg_h {text-align:left;background:url(/user{{$STATIC}}images/menu-dxt-red_bg.jpg) 0px no-repeat;line-height:30px;height:30px;width:7px;}
+.host_vh {text-align:left;background:url(/user{{$STATIC}}images/host_vh.jpg) 0px no-repeat;line-height:22px;padding-left:10px;}
 .left_dns {height:118px;width:262px;}
 .left_vip {height:121px;width:262px;}
 .left_vip2 {height:153px;width:262px;}
