--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -151,9 +151,9 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}</td></tr>
+										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td></tr>
 										  {{if $products[$i].db_quota}}
-										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}</td></tr>
+										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
 										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
@@ -201,9 +201,13 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
+										  </tr>
 										  {{if $products[$i].db_quota}}
-										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
+										  </tr>
 										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
@@ -249,9 +253,13 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
+										  </tr>
 										  {{if $products[$i].db_quota}}
-										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
+										  </tr>
 										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
@@ -296,9 +304,13 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
+										  </tr>
 										  {{if $products[$i].db_quota}}
-										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
+										  </tr>
 										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
@@ -342,9 +354,13 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
+										  </tr>
 										  {{if $products[$i].db_quota}}
-										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}</td></tr>
+										  <tr>
+										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
+										  </tr>
 										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
