--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -47,7 +47,8 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .topimg_8 {text-align:left;background:url(/user{{$STATIC}}images/help_8.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
 .topimg2 {text-align:left;background:url(/user{{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
 .topimg_h {text-align:left;background:url(/user{{$STATIC}}images/menu-dxt-red_bg.jpg) 0px no-repeat;line-height:30px;height:30px;width:7px;}
-.host_vh {text-align:left;background:url(/user{{$STATIC}}images/host_vh.jpg) 0px no-repeat;line-height:22px;padding-left:10px;}
+.host_img {text-align:left;background:url(/user{{$STATIC}}images/ico_tuijian.gif) 0px no-repeat;line-height:22px;padding-left:30px;}
+.host_vh {text-align:left;background:url(/user{{$STATIC}}images/host_vh.jpg) 0px no-repeat;line-height:22px;padding-left:15px;}
 .left_dns {height:118px;width:262px;}
 .left_vip {height:121px;width:262px;}
 .left_vip2 {height:153px;width:262px;}
@@ -64,8 +65,9 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_hg{height:30px;}
 .right_hg2{height:23px;}
 .right_hg3{height:36px;}
-.right_wid{ width:33%}
-.wid_menu{ width:970px}
+.right_wid{width:33%}
+.wid_menu{width:970px;}
+.host_wid{width:190px;}
 
 
 
