--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -4,45 +4,28 @@
       <td valign="top" width="262">
 	  <!--左部文件开始-->
 	  	<div class="left_main">
-			<!--幻灯片代码开始-->
-			<div class="left_box bgcolor_left">
-				<table border="0" cellpadding="0" cellspacing="0" width="262">
-					<tr>
-						<td valign="top">
-							<div class="picshow_main" style="z-index:10">
-								<div id="picdiv1">
-								  <a id="url1" href="#">
-									<img id="pic1" class="imgbig" src="/user{{$STATIC}}images/vip.jpg" alt="kangle 虚拟主机管理前台" border="0">
-								  </a>
-								</div>
-								<div id="picdiv2">
-								<a id="url2" href="#">
-									<img id="pic2" class="imgbig" src="/user{{$STATIC}}images/vip2.jpg" alt="kangle 虚拟主机管理前台" border="0"></a>
-								</div>
-								<div id="picdiv3">
-								  <a id="url3" href="#">
-									<img id="pic3" class="imgbig" src="/user{{$STATIC}}images/vip3.jpg" alt="kangle 虚拟主机管理前台" border="0">
-								  </a>  
-								</div>
-								<div id="picdiv4">
-								  <a id="url4" href="#">
-									<img id="pic4" class="imgbig" src="/user{{$STATIC}}images/vip4.jpg" alt="kangle 虚拟主机管理前台" border="0">
-								  </a>  
-								</div>
-
-								<div class="picshow_change">
-								  <a href="javascript:changeimg(1);" id="xxjdjj1"><img src="/user{{$STATIC}}images/index_adb1.gif" border="0"></a>
-								  <a href="javascript:changeimg(2);" id="xxjdjj2"><img src="/user{{$STATIC}}images/index_adb2.gif" border="0"></a>
-								  <a href="javascript:changeimg(3);" id="xxjdjj3"><img src="/user{{$STATIC}}images/index_adb3.gif" border="0"></a>
-								  <a href="javascript:changeimg(4);" id="xxjdjj4"><img src="/user{{$STATIC}}images/index_adb4.gif" border="0"></a>
-								</div>
-							</div>
-							<script>change_img();</script>
-						</td>
-					</tr>
-				</table>
+			<!--虚拟主机代码开始-->
+			<div class="left_box bgcolor_left left_bg_vh">
+				<div class="left_help_img"></div>
+				<div class="left_help_wid">
+					<table width="95%" border="0" cellpadding="0" cellspacing="0">
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">台湾双线路虚拟主机<span class="host_img"></span></div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">香港双线路虚拟主机</div></td><td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">日本双线路虚拟主机</div></td>
+						</tr>
+				  </table>
+				</div>
 			</div>
-			<!--幻灯片代码结束-->
+			<!--虚拟主机代码结束-->
+			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--公告代码开始-->
 			<div class="left_box bgcolor_left index_bg">
 				<div class="left_bg"></div>
@@ -119,10 +102,6 @@
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--左下角图片开始-->
 			<div class="left_box bgcolor_left left_bg_help left_dns"><a href="#"><img src="/user{{$STATIC}}images/l_dns.jpg" border="0"/></a></div>
-			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
-			<div class="left_box bgcolor_left left_bg_help left_vip"><a href="#"><img src="/user{{$STATIC}}images/l_vip.jpg" border="0"/></a></div>
-			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
-			<div class="left_box bgcolor_left left_bg_help left_vip2"><a href="#"><img src="/user{{$STATIC}}images/l_vip2.jpg" border="0"/></a></div>
 			<!--左下角图片结束-->
 		</div>
 	  <!--左部文件结束-->
