--- a/user/view/default/public/foot.html
+++ b/user/view/default/public/foot.html
@@ -1,3 +1,4 @@
+<!-- body结束-------------------------------------------------------------------------------------------------------------------------------- -->
 <div align="center">
 	<div class="left_box bgcolor_left left_bg_foot">
 		 <div class="left_help_wid">
@@ -19,7 +20,7 @@
 					<td colspan="3" align="center">
 						<table><tr><td align="center">
 								  | 关于我们 | 广告服务| 付款方式 | 友情连接| 
-								  <div align="center">Powered by JanBao vhs and <a href='http://www.kanglesoft.com/'>kangle</a></div>
+								  <div align="center">Powered by kangle-vhms and <a href='http://www.kanglesoft.com/'>kangle</a></div>
 						</td></tr></table>
 					</td>
 				</tr>
