--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -176,7 +176,7 @@ img{margin:0;padding:0;border:0;}
 	</table>
 <div>
 </div>
-
+<!--  body开始----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
 
 
