--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -128,17 +128,15 @@
 								  <td class="right_wid" valign="top">
 									<table id="table_rr" cellpadding="0" cellspacing="0">
 										  <tr>
-											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{if $products[$i].name}}{{$products[$i].name}}{{else}}暂无{{/if}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td></tr>
-										  {{if $products[$i].db_quota}}
+										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{if $products[$i].web_quota}}{{$products[$i].web_quota}}M{{else}}暂无{{/if}}</td></tr>
 										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
 										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
@@ -183,11 +181,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
@@ -235,11 +231,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
@@ -286,11 +280,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
@@ -336,11 +328,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
