aaaa public ctl.php host

--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -159,7 +159,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="#"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>
