--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -66,17 +66,16 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_hg2{height:23px;}
 .right_hg3{height:36px;}
 .right_wid{width:33%}
+.right_wid2{height:281px;width:689px;}
 .wid_menu{width:970px;}
 .host_wid{width:190px;}
 
 
-
-
 /*幻灯片*/
 .picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 221px}
-.picshow_main {	position: relative; width: 261px; height: 221px}
-.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 261px; height: 221px}
-.picshow_change {position: absolute; text-align: left; bottom: -5px; height: 27px; right: 0px; left: 150px;}
+.picshow_main {	position: relative; width: 689px; height: 281px}
+.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 689px; height: 281px}
+.picshow_change {position: absolute; text-align: left; bottom: -5px; height: 35px; right: 0px; left: 560px;}
 .picshow_change img {width:20px; height: 15px}
 .picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  -display: inline}
 .picshow_active {display:block}
