--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -19,6 +19,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_box {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #C2C2C2 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
 .mar_h{ padding-bottom:10px;}
 .Left_main {FLOAT: left; WIDTH: 263px;}
+.Left_main_vh {FLOAT: left; WIDTH: 213px;}
 .right_main {FLOAT: left; margin-left:5px;}
 .bgcolor_left{background-color:#E0E0E0;}
 .bgcolor_left2{background-color:#ffffff;}
@@ -28,6 +29,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg_vh{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_lei{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:213px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
 .left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
@@ -73,8 +75,8 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 
 /*幻灯片*/
 .picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 221px}
-.picshow_main {	position: relative; width: 689px; height: 281px}
-.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 689px; height: 281px}
+.picshow_main {	position: relative; width: 687px; height: 281px}
+.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 687px; height: 281px}
 .picshow_change {position: absolute; text-align: left; bottom: -5px; height: 35px; right: 0px; left: 560px;}
 .picshow_change img {width:20px; height: 15px}
 .picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  -display: inline}
@@ -168,6 +170,11 @@ img{margin:0;padding:0;border:0;}
 				</td>
 				<td width="6" height="42"><img src='/user{{$STATIC}}images/menu-home-red3.jpg'></td>
 			  </tr>
+			  <tr>
+			  	<td colspan="3" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+			  		当前位置:首页 >> 虚拟主机 >> M2型虚拟主机
+			  	</td>
+			 </tr>
 		  </table>
 	
 		</td>
