--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -3,9 +3,9 @@
     <tr>
       <td valign="top" width="262">
 	  <!--左部文件开始-->
-	  	<div class="left_main">
-			<!--虚拟主机代码开始-->
-			<div class="left_box bgcolor_left left_bg_vh">
+	  	<div class="left_main_vh">
+			<!--虚拟主机列表代码开始-->
+			<div class="left_box bgcolor_left left_bg_lei" align="left">
 				<div class="left_help_img"></div>
 				<div class="left_help_wid">
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
@@ -24,90 +24,15 @@
 				  </table>
 				</div>
 			</div>
-			<!--虚拟主机代码结束-->
+			<!--虚拟主机列表代码结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			<!--公告代码开始-->
-			<div class="left_box bgcolor_left index_bg">
-				<div class="left_bg"></div>
-				<div class="left_top">
-				<table cellpadding="0" cellspacing="0" id="table_t">
-					<tr><td class="left_hg" valign="top">
-						<table cellpadding="0" cellspacing="0" id="table_t">
-						{{for $i=count($news);$i>(count($news))-7;$i--}}
-							<tr>
-								<td class="fontcolor"><font color='red'><a href="?c=public&a=viewNewsById&id={{$news[$i].id}}" >{{substr($news[$i].title,0,21)}}</a></font></td>
-								<td class="fontcolor"><font color='red'>{{substr($news[$i].add_time,5,5)}}</font></td>
-							</tr>
-						 {{/for}}
-						</table>
-					  </td></tr>
-				  	 <tr><td><a href="#"><div class="left_bg_gong"></div></a></td></tr>
-				  </table>
-				</div>
-				
-			</div>
-			<!--公告代码结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			<!--帮助代码开始-->
-			<div class="left_box bgcolor_left left_bg_help">
-				<div class="left_help_img"></div>
-				<div class="left_help_wid">
-					<table width="95%" border="0" cellpadding="0" cellspacing="0">
-					    <tr>
-							<td class="fontcolor"><div class="left_box topimg_1">域名相关问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg_2">域名相关问题</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box topimg_3">支付问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg_4">域名相关问题</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box topimg_5">支付问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg_6">域名相关问题</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box topimg_7">支付问题</div></td><td>&nbsp;</td>
-							<td class="fontcolor"><div class="left_box topimg_8">域名相关问题</div></td>
-						</tr>
-				  </table>
-				</div>
-			</div>
-			<!--帮助代码结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			<!--备案图片结束-->
-			<div class="bgcolor_left left_bg_help left_beiban"><a href="#"><img src="/user{{$STATIC}}images/l_beian.jpg" border="0"/></a></div>
-			<!--备案图片结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			<!--客服代码开始-->
-			<div class="left_box bgcolor_left left_bg_help">
-				<div class="left_help_service"></div>
-				   <div class="left_help_wid">
-					<table width="95%" border="0" cellpadding="0" cellspacing="0">
-					    <tr>
-							<td class="fontcolor" rowspan="3"><div class="topimg2">&nbsp;</div></td><td>&nbsp;</td>
-							<td class="fontcolor right color_orange" align="left" width="160">免费咨询热线:<br />0791-88888888</td>
-						</tr>
-					    <tr>
-							<td>&nbsp;</td>
-							<td class="fontcolor right color_orange" align="left">免费咨询热线:<br />0791-88888888</td>
-						</tr>
-					    <tr>
-							<td>&nbsp;</td>
-							<td class="fontcolor right color_orange" align="left">免费咨询热线:<br />0791-88888888</td>
-						</tr>
-				    </table>
-				   </div>
-			 </div>
-			<!--客服代码结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			<!--左下角图片开始-->
-			<div class="left_box bgcolor_left left_bg_help left_dns"><a href="#"><img src="/user{{$STATIC}}images/l_dns.jpg" border="0"/></a></div>
-			<!--左下角图片结束-->
 		</div>
 	  <!--左部文件结束-->
 	  </td>
       <td valign="top">
 	 	 <!--右边代码开始-->
+		 
+		 
 	  	<!--右部虚拟主机开始-->
 			<div class="right_main">
 				<div class="right_top host_bg">
@@ -128,18 +53,16 @@
 								  <td class="right_wid" valign="top">
 									<table id="table_rr" cellpadding="0" cellspacing="0">
 										  <tr>
-											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{$products[$i].name}}</b></td>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>{{if $products[$i].name}}{{$products[$i].name}}{{else}}暂无{{/if}}</b></td>
 										  </tr>
-										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td></tr>
-										  {{if $products[$i].db_quota}}
+										  <tr><td class="right right_wid right_blue" width="60">空间大小：{{if $products[$i].web_quota}}{{$products[$i].web_quota}}M{{else}}暂无{{/if}}</td></tr>
 										  <tr><td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>
@@ -155,6 +78,9 @@
 			</div>
 		<!--右部虚拟主机结束-->	
 		
+		
+
+
 		{{if count($products)>3}}
 	  	<!--右部虚拟主机开始-->
 			<div class="right_main">
@@ -183,11 +109,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
@@ -235,11 +159,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
@@ -286,11 +208,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
@@ -336,11 +256,9 @@
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">空间大小：{{$products[$i].web_quota}}M</td>
 										  </tr>
-										  {{if $products[$i].db_quota}}
 										  <tr>
 										    <td class="right right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td>
 										  </tr>
-										  {{/if}}
 										  <tr><td class="right right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
