--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -93,7 +93,7 @@
 		 
 		 	  	<!--幻灯片开始-->
 			<div class="right_main">
-				<div class="right_top right_wid2">
+				<div class="left_box right_top right_wid2">
 					<table border="0" cellpadding="0" cellspacing="0" width="262">
 						<tr>
 							<td valign="top">
@@ -164,7 +164,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>
