--- a/user/view/default/product/pageListProduct.html
+++ b/user/view/default/product/pageListProduct.html
@@ -1,3 +1,4 @@
+{{include file='common/head.html'}}
 <div id="container">
 	<!--  <div class="padd mar_top"></div> -->
   <div id="main" class="wid"> 
