--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -6,6 +6,30 @@
 	  	<div class="left_main_vh">
 			<!--虚拟主机列表代码开始-->
 			<div class="left_box bgcolor_left left_bg_lei" align="left">
+				<div class="left_help_img2"><span class="host_vh3">虚拟主机</span></div>
+				<div class="left_help_wid">
+					<table width="95%" border="0" cellpadding="0" cellspacing="0">
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">台湾双线路虚拟主机<span class="host_img"></span></div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">香港双线路虚拟主机</div></td><td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box host_vh host_wid">日本双线路虚拟主机</div></td>
+						</tr>
+				  </table>
+				</div>
+			</div>
+			<!--虚拟主机列表代码结束-->
+			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+		
+		
+			<!--虚拟主机列表代码开始-->
+			<div class="left_box bgcolor_left left_bg_lei" align="left">
 				<div class="left_help_img"></div>
 				<div class="left_help_wid">
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
@@ -38,7 +62,7 @@
 				<div class="right_top host_bg">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
-							<table id="table_r" cellpadding="0" cellspacing="4">
+							<table border="0" cellpadding="0" cellspacing="4" id="table_r">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
 									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
@@ -64,13 +88,13 @@
 										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
 										  	<a href="#"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
-									 </table>
+								    </table>
 								  </td>
 								  
 								  {{/for}}
 								
 							  </tr>
-							</table>
+						  </table>
 						</td></tr>
 					</table>
 				</div>
