--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -137,15 +137,15 @@ img{margin:0;padding:0;border:0;}
 <div align="center">
 <div class="wid_menu">
 	<table width="963" border="0" cellpadding="0" cellspacing="0" align="center">
-	<form id="form1" name="form1" method="post" action="?c=session&a=login" >
+	<form id="form1" name="form1" method="post" action="?c=session&a=login&refer=web" >
 		<tr><td colspan="2">
-				{{if $role.user}}{{$role.user}},您好!  [<a href='?c=user&a=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]{{else}}
+				{{if $role.user}}{{$role.user}},您好!  [<a href='user/?c=frame&a=index&fc=user&fa=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]{{else}}
 				用户名:
 				<input name="username" type="text" size="12" />
 				密码:
 				<input name="passwd" type="password" size="12" />
 				<input type="submit" name="Submit" value="登录" />
-				<a href="?c=public&a=registerForm"><font color='red'>注册</font></a>
+				<a href="user/frame.php?c=public&a=registerForm"><font color='red'>注册</font></a>
 				忘记密码 
 				{{/if}}
 	  		</td>
